--- a/CvD.ipynb
+++ b/CvD.ipynb
@@ -2,8 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {
+    "collapsed": true,
     "executionInfo": {
      "elapsed": 927,
      "status": "ok",
@@ -40,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "executionInfo": {
      "elapsed": 915,
@@ -55,13 +56,7 @@
     },
     "id": "P7r15dtddFli"
    },
-   "outputs": [
-    {
-     "ename": "FileNotFoundError",
-     "evalue": "[WinError 3] Системе не удается найти указанный путь: '/content/drive/MyDrive/db1/train'",
-     "output_type": "error"
-    }
-   ],
+   "outputs": [],
    "source": [
     "t0 = time.time()\n",
     "train_dir = '/content/drive/MyDrive/db1/train' #directory with train database\n",
